--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,8 +1,47 @@
 .header {
-  max-width: 880px;
-  padding: 45px 0 41px 0;
+  max-width: 882px;
   margin: 0 auto;
-  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+  padding-top: 45px;
+  padding-bottom: 40.6px;
+  border-bottom: 1px solid #545454;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header__link {
+  height: 100%;
+  padding: 0;
+}
+
+.header__link-item {
+  font-size: 18px;
+  line-height: 22px;
+  color: #a9a9a9;
+  text-decoration: none;
+  transition: 0.2s;
+}
+
+.header__link-item:hover {
+  opacity: 0.7;
+}
+
+.header__email-container {
+  margin: 0 24px 0 0;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
+}
+
+.header__container {
+  display: flex;
+  align-items: center;
+}
+
+@media screen and (max-width: 900px) {
+  .header__container {
+    margin-right: 27px;
+  }
 }
 
 @media screen and (max-width: 980px) {
